# hashharness

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
examples/claude/: .mcp.json
examples/codex/: config.toml
scripts/: healthcheck-http.sh  run-mcp-http.sh
src/hashharness/: __init__.py  mcp_server.py  migrate.py  storage.py
system-model/: README.md  system.als  system.dfy
system-model/reports/: investigation-2026-05-07-cross-process-races.md  system-enforcement.md  system-reconciliation.md
tests/: test_storage.py
